k8s/deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: laravel-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: laravel

  template:
    metadata:
      labels:
        app: laravel

    spec:

      containers:
      - name: laravel

        image: shweta779/laravel-app:latest

        ports:
        - containerPort: 9000
