k8s/service.yml
apiVersion: v1

kind: Service

metadata:
  name: laravel-service

spec:

  selector:
    app: laravel

  ports:
  - port: 80
    targetPort: 9000

  type: LoadBalancer
