k8s/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: laravel-ingress

spec:

  rules:
  - http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: laravel-service

            port:

              number: 80
